--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "caprover-one-click-apps",
-  "version": "1.0.0",
-  "description": "One Click App Repository for CapRover",
-  "scripts": {
-    "formatter": "prettier --check \"./public/**/*.(json|yml)\"",
-    "formatter-write": "prettier --write \"./public/**/*.(json|yml)\"",
-    "build": "rm -rf ./dist/ && mkdir -p dist && node ./scripts/build_one_click_apps.js && node ./scripts/build_one_click_apps_from_v4.js",
-    "validate_apps": "node ./scripts/validate_apps.js",
-    "publish": "npm run build && ./scripts/publish-from-actions.sh"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/caprover/one-click-apps.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/caprover/one-click-apps/issues"
-  },
-  "homepage": "https://github.com/caprover/one-click-apps",
-  "dependencies": {
-    "fs-extra": "^9.0.1",
-    "gh-pages": "^3.1.0",
-    "prettier": "^2.0.5",
-    "yaml": "^1.10.0"
-  }
+	"name": "@skayo/caprover-one-click-apps",
+	"version": "1.0.0",
+	"description": "My Personal One-Click-App Repository for CapRover",
+	"scripts": {
+		"build": "rimraf ./dist && node ./scripts/build-one-click-apps.js && node ./scripts/build-one-click-apps-from-v4.js",
+		"validate": "node ./scripts/validate-apps.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+git@github.com:f97/one-click-apps.git"
+	},
+	"author": "Skayo (https://skayo.dev)",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/f97/one-click-apps/issues"
+	},
+	"homepage": "https://github.com/f97/one-click-apps",
+	"devDependencies": {
+		"fs-extra": "^10.0.0",
+		"rimraf": "^3.0.2",
+		"yaml": "^1.10.2"
+	}
 }
