--- a/public/v4/apps/vaultwarden.yml
+++ b/public/v4/apps/vaultwarden.yml
@@ -6,7 +6,7 @@ captainVersion: 4
 caproverOneClickApp:
 
     # App name
-    displayName: vaultwarden (Skayo)
+    displayName: vaultwarden (f97)
 
     # Description displayed on the app list
     description: |-
@@ -17,8 +17,6 @@ caproverOneClickApp:
 
         # Displayed one the app config page, where you enter all variable values
         start: |-
-            ![Vaultwarden Logo](https://raw.githubusercontent.com/dani-garcia/vaultwarden/main/resources/vaultwarden-logo.svg)
-
             📖 [Documentation](https://github.com/dani-garcia/vaultwarden/wiki)
             📁 [GitHub](https://github.com/dani-garcia/vaultwarden)
             🐳 [DockerHub](https://hub.docker.com/r/vaultwarden/server)
@@ -64,18 +62,14 @@ caproverOneClickApp:
             description: |-
                 Specify your system's time zone.  
                 Click [here](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones) for a list of available time zones.
-            defaultValue: Europe/Vienna
+            defaultValue: Asia/Ho_Chi_Minh
             validRegex: /^\w+\/\w+$/
 
         # Variable for user signups enabled/disabled
-        -   id: $$cap_user_signups
-            label: Enable User Sign-Ups?
+        -   id: $$cap_admin_token
+            label: Admin token?
             description: |-
-                Controls if new users can register.
                 > *NOTE*: You should probably disable this after you sign-up.
-            defaultValue: "true"
-            validRegex: /^(true|false)$/
-
 
 # Define services
 services:
@@ -102,7 +96,7 @@ services:
             WEBSOCKET_ENABLED: true
 
             # Disable user sign-ups
-            SIGNUPS_ALLOWED: $$cap_user_signups
+            ADMIN_TOKEN: $$cap_admin_token
 
         # Define ports
         ports:
