--- a/public/v4/apps/gitea.yml
+++ b/public/v4/apps/gitea.yml
@@ -7,6 +7,8 @@ services:
         volumes:
             - $$cap_appname-data:/data
         restart: always
+        environment:
+            RUN_MODE: prod
         caproverExtra:
             containerHttpPort: '3000'
 caproverOneClickApp:
@@ -19,12 +21,13 @@ caproverOneClickApp:
     instructions:
         start: >-
             A painless self-hosted Git service. Gitea is a community managed fork of Gogs.
+            Enter your Gitea Configuration parameters and click on next. A SQlite (database) and a Gitea container will be created for you. The process will take about a minute to finish.
         end: >
             Gitea is deployed and available as $$cap_appname.
             Be sure to change 'Gitea Base URL' duirng initial setup otherwise you may experience issues. 
             Since Gitea is running inside a container, you can optionally map a port (not 22) of the host to port 22 of the container, if you want to use git commands over SSH. You can perform port mapping in your CapRover dashboard, in App Config section.
             IMPORTANT: It will take up to 2 minutes for Gitea to be ready. Before that, you might see 502 error page.
-    displayName: ''
+    displayName: Gitea (f97)
     isOfficial: false
-    description: Gitea is a software package for hosting software development using Git as well as bug tracking, wikis and code review
+    description: Gitea without .env for database
     documentation: Taken from https://hub.docker.com/r/gitea/gitea/
