--- a/public/v4/apps/vaultwarden.yml
+++ b/public/v4/apps/vaultwarden.yml
@@ -6,7 +6,7 @@ captainVersion: 4
 caproverOneClickApp:
 
     # App name
-    displayName: @f97/vaultwarden
+    displayName: f97/vaultwarden
 
     # Description displayed on the app list
     description: |-
@@ -18,13 +18,6 @@ caproverOneClickApp:
         # Displayed one the app config page, where you enter all variable values
         start: |-
             📖 [Documentation](https://github.com/dani-garcia/vaultwarden/wiki)
-            📁 [GitHub](https://github.com/dani-garcia/vaultwarden)
-            🐳 [DockerHub](https://hub.docker.com/r/vaultwarden/server)
-            👛 [Donate](https://github.com/sponsors/dani-garcia)
-
-            Alternative implementation of the Bitwarden server API written in Rust and compatible with upstream Bitwarden clients*, perfect for self-hosted deployment where running the official resource-heavy service might not be ideal.
-
-            > *NOTE*: This project was known as Bitwarden_RS and has been renamed to separate itself from the official Bitwarden server in the hopes of avoiding confusion and trademark/branding issues.
 
         # Displayed after deployment
         end: |-
@@ -53,7 +46,7 @@ caproverOneClickApp:
             description: |-
                 Specify the version tag to install.  
                 Click [here](https://hub.docker.com/r/vaultwarden/server/tags) for a list of available tags.
-            defaultValue: 1.23.0-alpine
+            defaultValue: alpine
             validRegex: /^(?:\d+\.\d+\.\d+(?:\.\d+)?)(?:-alpine)?(?:-(?:arm|amd)(?:64|32)(?:v\d+)?)?$/
 
         # Variable for time zone
