--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Validate, Build & Deploy
 on:
     push:
         branches:
-            - main
+            - master
     pull_request:
         branches:
-            - main
+            - master
 
 jobs:
     validate-build-deploy:
@@ -42,6 +42,6 @@ jobs:
                 with:
                     branch: gh-pages
                     folder: dist
-                    git-config-name: SkayoBot
-                    git-config-email: frederike.gnampf@gmail.com
+                    git-config-name: f97
+                    git-config-email: admin@f97.xyz
                     clean: true
